# jni.hpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
.circleci/: config.yml
example/: Hello.java  hello.cpp
examples/: Binding.java  NativePeer.java  binding.cpp  binding.hpp  hello.cpp  native_peer.cpp
include/jni/: advanced_ownership.hpp  array.hpp  arraylike.hpp  boxing.hpp  class.hpp  constructor.hpp  errors.hpp  field.hpp  functions.hpp  jdks.hpp  jni.hpp  make.hpp  method.hpp  native_method.hpp  object.hpp  ownership.hpp  pointer_to_value.hpp  static_field.hpp  static_method.hpp  string.hpp  tagging.hpp  traits.hpp  type.hpp  type_signature.hpp  types.hpp  unicode.hpp  unique.hpp  unique_pointerlike.hpp  weak_reference.hpp  wrapping.hpp
linux/: Dockerfile  llvm.list  ubuntu-toolchain-r-test.list
misc/: compiler-major-version.sh  compiler.sh
test/: CMakeLists.txt  high_level.cpp  jni.h  low_level.cpp  test.hpp  unicode.cpp
test/android/: jni.h
test/openjdk/: jni.h
